--- a/uims/pom.xml
+++ b/uims/pom.xml
@@ -15,6 +15,7 @@
     <description>uims</description>
     <properties>
         <java.version>17</java.version>
+        <postgres.driver.version>42.4.1</postgres.driver.version>
     </properties>
     <dependencies>
         <dependency>
@@ -31,9 +32,9 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgres.driver.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
